# langsmith-sdk

./: .gitignore  .gitmodules  .mlc_config.json  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  package.json  pyproject.toml  turbo.json
python/: .bumpversion.cfg  .gitignore  AGENTS.md  Makefile  README.md  conftest.py  diff_against_main.patch  full_output.txt  index.rst  mypy.ini  output.txt  pyproject.toml  script_get_experiment.py  temp.json  test.py  test_otel_context_demo.py  tracing_script.py
python/_openapi_client/: _resource.py
python/_openapi_client/resources/: info.py
python/_openapi_client/types/: info_list_response.py
python/_scripts/: generate_markdown.py
python/bench/: .gitignore  __main__.py  create_run.py  create_run_tree.py  dumps_json.py  get_run_data.py  get_runs.py  get_runs_data.py  inflight_trace_bytes.md  inflight_trace_bytes.py  inputs.jsonl  io_compression.py  json_serialization.py  outputs.jsonl  tracing_client_bench.py  tracing_client_bench_mem.py  tracing_client_lmdb_zstd.py  tracing_client_sqlite_zstd.py  tracing_client_via_pyo3.py  tracing_rust_client_bench.py  tracing_script.py  upload_example_with_large_file_attachment.py  upload_examples_bench.py  utils.py
python/bench/data/: run_ops_1efb27a4-5264-6908-9ab5-23fc3c60ae2d.jsonl
python/bench/inputs/: inputs_0.jsonl  inputs_1.jsonl  inputs_2.jsonl  inputs_3.jsonl  inputs_4.jsonl  inputs_5.jsonl  inputs_6.jsonl  inputs_7.jsonl  inputs_8.jsonl  inputs_9.jsonl
python/bench/outputs/: outputs_0.jsonl  outputs_1.jsonl  outputs_2.jsonl  outputs_3.jsonl  outputs_4.jsonl  outputs_5.jsonl  outputs_6.jsonl  outputs_7.jsonl  outputs_8.jsonl  outputs_9.jsonl
python/cassettes/: _expect.yaml  _langchain.yaml  _runner.yaml
python/docs/: .gitignore  Makefile  conf.py  create_api_rst.py  requirements.txt
python/docs/_extensions/: gallery_directive.py
python/docs/reference/: client.md  sidebar.json
python/docs/scripts/: custom_formatter.py
python/docs/templates/: langsmith_docs.html  redirects.html  sidebar-nav-bs.html
python/examples/: evaluate.py  sandbox_chrome_novnc_playwright.py  sandbox_private_github_app.py
python/langchainplus_sdk/: __init__.py  client.py  run_helpers.py  run_trees.py  schemas.py  utils.py
python/langchainplus_sdk/cli/: main.py  ngrok_config.yaml
python/langchainplus_sdk/evaluation/: __init__.py  evaluator.py  huggingface.py  string_evaluator.py
python/langchainplus_sdk/internal/: models.py
python/langsmith/: __init__.py  _expect.py  _runtime_overrides.py  _testing.py  _uuid.py  aio.py  anonymizer.py  async_client.py  cache.py  client.py  context.py  env.py  hub_client.py  middleware.py  otel.py  prompt_cache.py  prompt_cache_singleton.py  pytest_plugin.py  run_helpers.py  run_trees.py  schemas.py  tracing_offload.py  utils.py  uuid.py
python/langsmith/_internal/: _aiter.py  _backend_version.py  _background_thread.py  _beta_decorator.py  _cache.py  _cache_utils.py  _compressed_runs.py  _compressed_traces.py  _constants.py  _context.py  _edit_distance.py  _embedding_distance.py  _hub.py  _inflight.py  _multipart.py  _oauth_refresh_lock.py  _operations.py  _orjson.py  _otel_utils.py  _package_version.py  _patch.py  _profiles.py  _serde.py  _usage.py  _uuid.py  _v2_migration_utils.py
python/langsmith/_openapi_client/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
python/langsmith/beta/: __init__.py  _evals.py
python/langsmith/cli/: .env.example  README.md  __init__.py  __main__.py  config.py  dataset.py  docker-compose.beta.yaml  docker-compose.dev.yaml  docker-compose.yaml  evaluator.py  example.py  experiment.py  filters.py  generation.py  main.py  output.py  run.py  thread.py  trace.py  tracing_project.py  utils.py
python/langsmith/env/: __init__.py  _git.py  _runtime_env.py
python/langsmith/evaluation/: __init__.py  _arunner.py  _integrations.py  _key_extraction.py  _name_generation.py  _runner.py  _scratch.py  evaluator.py  feedback_loop.py  llm_evaluator.py  string_evaluator.py
python/langsmith/pytest/: mark.py
python/langsmith/sandbox/: README.md  __init__.py  _async_client.py  _async_sandbox.py  _async_session.py  _callback_verifier.py  _client.py  _exceptions.py  _helpers.py  _models.py  _mounts.py  _proxy_config.py  _sandbox.py  _session.py  _transport.py  _tunnel.py  _ws_execute.py  _ws_session.py
python/langsmith/testing/: __init__.py  _internal.py
python/langsmith/wrappers/: __init__.py  _agent_utils.py  _anthropic.py  _gemini.py  _generic.py  _openai.py  _openai_agents.py
python/langsmith_api/: _base_client.py  _client.py  _constants.py  _files.py  _response.py  _types.py  _version.py  pagination.py
python/langsmith_api/_utils/: _resources_proxy.py
python/langsmith_api/resources/: __init__.py  settings.py
python/langsmith_api/types/: __init__.py  annotation_queue_annotation_queues_params.py  annotation_queue_create_run_status_params.py  annotation_queue_export_params.py  annotation_queue_populate_params.py  annotation_queue_retrieve_annotation_queues_params.py  annotation_queue_retrieve_annotation_queues_response.py  annotation_queue_retrieve_queues_response.py  annotation_queue_retrieve_response.py  annotation_queue_retrieve_run_params.py  annotation_queue_retrieve_size_params.py  annotation_queue_retrieve_total_archived_params.py  annotation_queue_rubric_item_schema.py  annotation_queue_rubric_item_schema_param.py  annotation_queue_schema.py  annotation_queue_size_schema.py  annotation_queue_update_params.py  api_feedback_source_param.py  app_feedback_source_param.py  app_hub_crud_tenants_tenant.py  attachments_operations_param.py  auto_eval_feedback_source_param.py  commit_manifest_response.py  create_repo_response.py  custom_charts_section.py  data_type.py  dataset.py  dataset_clone_params.py  dataset_create_params.py  dataset_version.py  (+55 more)
python/profiles/: ser.prof
rust/: Cargo.toml
server/: README.md  pyproject.toml  run.sh
server/langsmith/: __init__.py  server.py
(+1454 files in other folders)
