[tool.poetry]
name = "langsmith"
version = "0.1.84"
description = "Client library to connect to the LangSmith LLM Tracing and Evaluation Platform."
authors = ["LangChain <support@langchain.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/langchain-ai/langsmith-sdk"
homepage = "https://smith.langchain.com/"
documentation = "https://docs.smith.langchain.com/"
keywords = [
  "langsmith",
  "langchain",
  "llm",
  "nlp",
  "language",
  "translation",
  "evaluation",
  "tracing",
  "platform",
]
packages = [{ include = "langsmith" }]

[tool.poetry.scripts]
langsmith = "langsmith.cli.main:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = [
  { version = ">=1,<3", python = "<3.12.4" },
  { version = "^2.7.4", python = ">=3.12.4" },
]
requests = "^2"
orjson = "^3.9.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = ">=23.3,<25.0"
mypy = "^1.9.0"
ruff = "^0.3.4"
types-requests = "^2.31.0.1"
pandas-stubs = "^2.0.1.230501"
types-pyyaml = "^6.0.12.10"
pytest-asyncio = "^0.21.0"
types-psutil = "^5.9.5.16"
psutil = "^5.9.5"
freezegun = "^1.2.2"
pytest-subtests = "^0.11.0"
pytest-watcher = "^0.3.4"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
dataclasses-json = "^0.6.4"
types-tqdm = "^4.66.0.20240106"
vcrpy = "^6.0.1"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pytest-rerunfailures = "^14.0"
pytest-socket = "^0.7.0"

[tool.poetry.group.lint.dependencies]
openai = "^1.10"


[tool.poetry.group.test.dependencies]
pytest-socket = "^0.7.0"

[tool.poetry.extras]
vcr = ["vcrpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "D",    # pydocstyle
  "D401", # First line should be in imperative mood
]
lint.ignore = [
  # Relax the convention by _not_ requiring documentation for every function parameter.
  "D417",
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"langsmith/cli/*" = ["D"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
plugins = ["pydantic.v1.mypy", "pydantic.mypy"]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
