[workspace]
members = [
    "crates/langsmith_pyo3",
    "crates/langsmith_tracing_client",
]
resolver = "2"

[workspace.lints]

[workspace.dependencies]
chrono = "0.4.38"
flate2 = "1.0.34"
futures = "0.3.31"
rayon = "1.10.0"
reqwest = { version = "0.12.8", features = ["multipart", "stream", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sonic-rs = "0.3.14"
tempfile = "3.13.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
ureq = "2.10.1"
uuid = { version = "1.11.0", features = ["v4"] }
