[workspace]
members = [
    "crates/langsmith-pyo3",
    "crates/langsmith-tracing-client",
    "crates/langsmith-nodejs",
]
resolver = "2"

[workspace.lints]

[workspace.dependencies]
chrono = "0.4.38"
flate2 = "1.0.34"
futures = "0.3.31"
napi = { version = "2.16.13", features = ["napi9", "serde-json", "async"] }
napi-derive = "2.16.13"
napi-build = "2.1.3"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.13.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
ureq = "2.10.1"
uuid = { version = "1.11.0", features = ["v4"] }

# Use rustls instead of OpenSSL, because OpenSSL is a nightmare when compiling across platforms.
# OpenSSL is a default feature, so we have to disable all default features, then re-add
# everything except `default-tls` which pulls in OpenSSL:
# https://github.com/seanmonstar/reqwest/blob/e2d4b14c695acaebe531af7ce4712e182278f38a/Cargo.toml#L30
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "multipart", "stream", "blocking"] }
