[tool.poetry]
name = "langsmith-server"
version = "0.0.1"
description = "Mock LangSmith LLM Tracing and Evaluation Platform."
authors = ["Mike DuPont <jmikedupont2@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/meta-introspector/langsmith-sdk"
homepage = "https://smith.langchain.com/"
documentation = "https://docs.smith.langchain.com/"
keywords = [
  "langsmith",
  "langchain",
  "llm",
  "nlp",
  "language",
  "translation",
  "evaluation",
  "tracing",
  "platform",
]
packages = [{ include = "langsmith" }]

[tool.poetry.scripts]
langsmith = "langsmith.server:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = ">=1,<3"
requests = "^2"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.270"
types-requests = "^2.31.0.1"
pandas-stubs = "^2.0.1.230501"
types-pyyaml = "^6.0.12.10"
pytest-asyncio = "^0.21.0"
langchain = "^0.0.295"
types-psutil = "^5.9.5.16"
psutil = "^5.9.5"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
