[package]
name = "langsmith_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `from langsmith_pyo3 import *`). If you change this, you must also change
# the name of the top `#[pymodule]` in `src/lib.rs`.
name = "langsmith_pyo3"

# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" is what Rust uses to use this crate as a library, for example in tests, benchmarks,
#    examples, or Rust binaries built using this library.
#
# Downstream *Rust* code (including any code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use langsmith_pyo3;` unless the "rlib" or "lib" crate type is also included.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3-async-runtimes = { workspace = true }
pyo3 = { workspace = true }
langsmith_tracing_client = { path = "../langsmith_tracing_client" }
