[package]
name = "langsmith_tracing_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
reqwest = { version = "0.12.8", features = ["multipart"] }
thiserror = "1.0"
mockito = "1.5.0"
